--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 ml-auto mr-auto text-center">
-              <h2 class="title">Sponsors</h2>
+              <h2 class="title">Our Previous Sponsors</h2>
               
             </div>
           </div>
