added gallery images

--- a/index.html
+++ b/index.html
@@ -435,29 +435,175 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="card card-plain card-testimonial">
-                <div class="card-header card-header-image">
-                  <a href="#pablo">
-                    <img class="img img-raised" src="./assets/img/bg5.jpg">
-                  </a>
-                </div>
-                <div class="card-body">
-                        <h5 class="card-description">Image description 1</h5>     
-                        </div>
-              </div>
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00001.jpg">
+                      </div>
+                <!-- <div class="card-body">
+                  <h5 class="card-description">Image description 1</h5>     
+                </div> -->
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <div class="card card-testimonial card-plain">
-                        <div class="card-header card-header-image">
-                  <a href="#pablo">
-                    <img class="img img-raised" src="./assets/img/bg5.jpg">
-                  </a>
-                </div>
-                <div class="card-body">
-                        <h5 class="card-description">Image description 2</h5>     
-                        </div>
-                      </div>
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00002.jpg">
                     </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
                   </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00003.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00004.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00005.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00006.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00007.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00008.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00009.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00010.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00011.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00012.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00013.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00014.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00015.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00016.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card card-testimonial card-plain">
+                      <div class="card-header card-header-image">
+                        <img class="img img-raised" src="./assets/img/gallery/00017.jpg">
+                    </div>
+                    <!-- <div class="card-body">
+                      <h5 class="card-description">Image description 2</h5>     
+                    </div> -->
+                      </div>
+                  </div>
+                </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicatorss" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
