updated faculty pictures

--- a/index.html
+++ b/index.html
@@ -419,10 +419,7 @@
     </div>
    
     <div class="cd-section" id="gallery">
-      <!--     *********    TESTIMONIALS 1     *********      -->
-      
-
-      <!--     *********    TESTIMONIALS 2     *********      -->
+      <!--     *********    GALLERY CAROUSEL     *********      -->
       <div class="testimonials-2 section-dark">
         <div class="container">
         	<div class="col-md-10 ml-auto mr-auto text-center">
@@ -618,7 +615,7 @@
           </div>
         </div>
       </div>
-      <!--     *********    END TESTIMONIALS 2      *********      -->
+      <!--     *********    END GALLERY CAROUSEL    *********      -->
     </div>
 </div>
         <div class="cd-section" id="contactus">
@@ -634,7 +631,7 @@
             <div class="col-md-3">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/faculties/prabina.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Prabina Rajib</h4>
@@ -649,7 +646,7 @@
             <div class="col-md-3">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/faculties/saini.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Saini Das</h4>
@@ -664,7 +661,7 @@
             <div class="col-md-3">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/faculties/tutan.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Tutan Ahmed</h4>
@@ -679,7 +676,7 @@
             <div class="col-md-3">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/faculties/srinivas.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">S Srinivasan</h4>
