--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     </div>
 </div>
         <div class="cd-section" id="contactus">
-      <!--     *********    TEAM 1     *********      -->
+      <!--     *********    FACULTY COORDINATORS    *********      -->
       <div class="team-1" id="team-1">
         <div class="container">
           <div class="row">
