Updated Team Photos

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Vighna Raj.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">S Vighna Raj</h4>
@@ -865,7 +865,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Kedar Kulkarni.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Kedar Kulkarni</h4>
@@ -879,7 +879,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Anupam.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Anupam Sarangal</h4>
@@ -893,7 +893,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Rishabh Panchal.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Rishabh Panchal</h4>
@@ -907,7 +907,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Kushal.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Kushal</h4>
@@ -921,7 +921,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Mohan Kalkal.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Mohan Kalkal</h4>
@@ -937,7 +937,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/G Teja.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">G Teja</h4>
@@ -951,7 +951,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Bhargava.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Bhargava</h4>
@@ -965,7 +965,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Arnav Mohan.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Arnav Mohan</h4>
@@ -979,7 +979,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Mohit Gupta.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Mohit Gupta</h4>
@@ -994,7 +994,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Nishant Arora.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Nishant Arora</h4>
@@ -1008,7 +1008,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Pratik Deolasi.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Pratik Deolasi</h4>
@@ -1024,7 +1024,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Rohit Gupta.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Rohit Gupta</h4>
@@ -1038,7 +1038,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Shashank Dhawale.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Shashank</h4>
@@ -1052,7 +1052,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Swati Solanki.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Swati Solanki</h4>
@@ -1066,7 +1066,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Vijay Bhaskar.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Vijay Bhaskar</h4>
@@ -1080,7 +1080,7 @@
              <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/snr/Abhishek Wagh.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Abhishek Wagh</h4>
@@ -1094,7 +1094,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Kanika.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Kanika Yadav</h4>
@@ -1110,7 +1110,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Aashwin.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Aashwin Sonker</h4>
@@ -1124,7 +1124,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Aditya Garg.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Aditya Garg</h4>
@@ -1138,7 +1138,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Shimon.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Shimon</h4>
@@ -1152,7 +1152,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Vignesh.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Vignesh V</h4>
@@ -1166,7 +1166,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Akash Sahu.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Akash Sahu</h4>
@@ -1180,7 +1180,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Deep Shah.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Deep Shah</h4>
@@ -1196,7 +1196,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Gaganpreet.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Gaganpreet</h4>
@@ -1209,7 +1209,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Garima.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Garima Agarwal</h4>
@@ -1223,7 +1223,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Himanshu Jain.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Himanshu Jain</h4>
@@ -1236,7 +1236,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Kartik Dasari.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Karthik Dasari</h4>
@@ -1250,7 +1250,7 @@
              <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/marc.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Laxmi Raje.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Laxmi Raje</h4>
@@ -1264,7 +1264,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/kendall.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Samuel David.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Samuel David</h4>
@@ -1280,7 +1280,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/christian.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Shreyas.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Shreyash</h4>
@@ -1294,7 +1294,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Subham Paul.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Shubham Paul</h4>
@@ -1308,7 +1308,7 @@
                         <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/faces/avatar.jpg" />
+                    <img class="img" src="./assets/img/Team/jnr/Vishnu.JPG" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Vishnu Prasanth</h4>
