added contact and other minor changes

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="#theteam" class="nav-link">
+                    Our Team
+                  </a>
+                </li>               
+                 <li class="nav-item">
                   <a href="#contactus" class="nav-link">
                     Contact Us
                   </a>
@@ -121,8 +126,12 @@
 				</h3>
                 <h4 align="justify">Purvodaya is an amalgamation of events spread across all the domains of business and management. Spread across 3 days, it provides an ideal platform for the budding managers and innovators of today to hone their skills and test their mettle against their peers. The event hosts a complete business extravaganza.</h4>
                 <br>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="btn btn-danger btn-lg">
-                  <i class="fa fa-sign-in"></i>&nbsp&nbsp Register
+                <a href="#events" class="btn btn-danger btn-lg">
+                  <i class="fa fa-sign-in"></i>&nbsp&nbsp Event Registration
+                </a>
+                &nbsp &nbsp
+                <a href="#contactus" class="btn btn-danger btn-lg">
+                  <i class="fa fa-inr"></i>&nbsp&nbsp Become a Sponsor 
                 </a>
               </div>
               <div class="col-md-5 ml-auto">
@@ -165,7 +174,7 @@
       <!--     *********     FEATURES 5      *********      -->
       <div class="features-5" style="background-image: url('./assets/img/bg9.jpg')">
         <div class="col-md-8 ml-auto mr-auto text-center">
-          <h2 class="title">It's big</h2>
+          <h2 class="title">Purvodaya Stats</h2>
         </div>
         <div class="container">
           <div class="row">
@@ -183,8 +192,8 @@
                 <div class="icon">
                   <i class="fa fa-users"></i>
                 </div>
-                <h4 class="info-title">5000+</h4>
-                <p>Purvodaya'19 saw a footfall of over 5000 students from across the country </p>
+                <h4 class="info-title">3000+</h4>
+                <p>Purvodaya'19 saw a footfall of over 3000 students from across the country </p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -212,8 +221,8 @@
                 <div class="icon">
                   <i class="fa fa-graduation-cap"></i>
                 </div>
-                <h4 class="info-title">100+</h4>
-                <p>Over 100+ participating colleges spread across the country</p>
+                <h4 class="info-title">250+</h4>
+                <p>Over 250 participating colleges spread across the country</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -772,7 +781,7 @@
       <!--     *********    END GALLERY CAROUSEL    *********      -->
     </div>
 </div>
-        <div class="cd-section" id="contactus">
+        <div class="cd-section" id="theteam">
       <!--     *********    FACULTY COORDINATORS    *********      -->
       <div class="team-1" id="team-1">
         <div class="container">
@@ -882,7 +891,7 @@
                     <img class="img" src="./assets/img/Team/snr/Anupam.JPG" />
                   </div>
                 <div class="card-body ">
-                  <h4 class="card-title">Anupam Sarangal</h4>
+                  <h4 class="card-title">Anupam</h4>
                 </div>
                 <div class="card-footer justify-content-center">
                   <a href="https://www.facebook.com/anupam.sarangal" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -1124,7 +1133,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/Team/jnr/Aditya Garg.JPG" />
+                    <img class="img" src="./assets/img/Team/jnr/Aditya Garg.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Aditya Garg</h4>
@@ -1166,7 +1175,7 @@
             <div class="col-md-2">
               <div class="card card-profile card-plain">
                 <div class="card-header card-avatar">
-                    <img class="img" src="./assets/img/Team/jnr/Akash Sahu.JPG" />
+                    <img class="img" src="./assets/img/Team/jnr/Akash Sahu.jpg" />
                   </div>
                 <div class="card-body ">
                   <h4 class="card-title">Akash Sahu</h4>
@@ -1327,7 +1336,7 @@
       </div>
       <!--     *********    END TEAM 1      *********      -->
       
-    <div class="cd-section" id="contactus-2">
+    <div class="cd-section" id="contactus">
       <!--     *********    CONTACT US 1     *********      -->
       <div class="contactus-1 section-image" style="background-image: url('./assets/img/examples/city.jpg')">
         <div class="container">
@@ -1336,6 +1345,7 @@
               <h2 class="title">Get in Touch</h2>
               <div class="info info-horizontal">
                 <div class="icon icon-primary">
+                  <!--<a href="https://goo.gl/maps/Vkdcqoq4wCpzvQAF8" target="_blank"><i class="material-icons">pin_drop</i></a> -->
                   <i class="material-icons">pin_drop</i>
                 </div>
                 <div class="description">
@@ -1363,7 +1373,10 @@
                 <div class="description">
                   <h4 class="info-title">Call Us</h4>
                   <p> Vighna Raj
-                    <br> +91 7708724867
+                    <br> +91 77087 24867
+                  </p>
+                  <p> Kedar Kulkarni
+                    <br> +91 78755 36755
                   </p>
                 </div>
               </div>
@@ -1522,7 +1535,13 @@
       </li>
       <li>
       <li>
-        <a href="#contactus" data-number="7">
+        <a href="#theteam" data-number="7">
+          <span class="cd-dot"></span>
+          <span class="cd-label">Our Team</span>
+        </a>
+      </li>
+    	<li>
+        <a href="#contactus" data-number="8">
           <span class="cd-dot"></span>
           <span class="cd-label">Contact Us</span>
         </a>
